fixed background clipping

--- a/src/Css/main_page.css
+++ b/src/Css/main_page.css
@@ -3,14 +3,12 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: arial;
 }
 
 body {
+  background: linear-gradient(to bottom right, #bea7aa 0%, #a8aebf 67%, #87a7bf 100%) fixed;
   font-family: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif;
-  font-weight: 500;
-  background-image: linear-gradient(to bottom right, #bea7aa 0%, #a8aebf 67%, #87a7bf 100%);
-  height: 100vh;
+  font-weight: 500; 
 }
 
 .container{
